# edix

./: .gitignore  Dockerfile  MANIFEST.in  Makefile  README.md  alembic.ini  build.py  docker-compose.yml  edix-app-py.py  edix-cli-and-models.py  edix-database-py.py  edix-deployment.md  edix-editor-react.tsx  edix-final-files.py  edix-frontend-components.js  edix-installer.sh  edix-project-structure.md  edix-pyproject-toml.txt  edix-setup-py.py  edix-styles-examples.md  edix-support-files.md  edix.db  nginx.conf  pyproject.toml  pytest.ini  requirements.txt  setup.py
config/: edix.yaml
edix/: __init__.py  __main__.py  app.py  config.py  database.py  main.py  models.py
edix/api/: websocket.py
edix/api/v1/: __init__.py
edix/api/v1/endpoints/: auth.py  data_items.py  schemas.py  structures.py  users.py
edix/core/: __init__.py  security.py
edix/crud/: __init__.py  base.py  crud_data_item.py  crud_schema.py  crud_structure.py  crud_user.py
edix/db/: base.py  deps.py  init_db.py
edix/db/migrations/: env.py
edix/models/: __init__.py  base.py  data_item.py  schema.py  structure.py  user.py
edix/schemas/: __init__.py  base.py  data_item.py  manager.py  msg.py  schema.py  structure.py  token.py  user.py
edix/static/: editor.worker.js  editor.worker.js.map  html.worker.js  html.worker.js.map  json.worker.js  json.worker.js.map
edix/templates/: base.html  editor.html
edix/tests/: __init__.py  test_api.py  test_database.py
edix/utils/: files.py
frontend_src/: babel.config.json  package.json  webpack.config.js
frontend_src/public/: index.html
frontend_src/src/: index.js
frontend_src/src/components/: App.jsx  CodeEditor.jsx  DataTree.jsx  SchemaBuilder.jsx  StructureList.jsx
frontend_src/src/contexts/: EdixContext.jsx
frontend_src/src/styles/: main.css
frontend_src/src/utils/: editor-utils.js
tests/: test_edix.py
