[build-system]
requires = ["setuptools>=65", "wheel", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "edix"
version = "1.0.0"
description = "Universal data structure editor with dynamic SQL schema generation"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "Apache-2.0"}
authors = [
    {name = "Tom Sapletta", email = "info@softreck.dev"}
]
maintainers = [
    {name = "Your Name", email = "your.email@example.com"}
]
keywords = [
    "cms", 
    "editor", 
    "yaml", 
    "json", 
    "sqlite", 
    "fastapi", 
    "data-structure",
    "schema-editor"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Framework :: FastAPI",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Software Development :: Libraries",
]

dependencies = [
    "fastapi>=0.100.0",
    "uvicorn[standard]>=0.23.0",
    "pydantic>=2.0.0",
    "pyyaml>=6.0",
    "aiosqlite>=0.19.0",
    "jinja2>=3.1.0",
    "python-multipart>=0.0.6",
    "websockets>=11.0",
    "jsonschema>=4.19.0",
    "alembic>=1.12.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "mypy>=1.5.0",
    "ruff>=0.0.290",
]
export = [
    "openpyxl>=3.1.0",  # Excel export
    "lxml>=4.9.0",      # XML export
    "toml>=0.10.2",     # TOML export
]

[project.urls]
Homepage = "https://github.com/yourusername/edix"
Documentation = "https://edix.readthedocs.io"
Repository = "https://github.com/yourusername/edix"
Issues = "https://github.com/yourusername/edix/issues"

[project.scripts]
edix = "edix.__main__:main"
edix-server = "edix.app:run_server"

[tool.setuptools]
packages = ["edix", "edix.api"]
include-package-data = true

[tool.setuptools.package-data]
edix = [
    "static/**/*",
    "templates/**/*",
    "schemas/*.json",
]

[tool.black]
line-length = 100
target-version = ["py38", "py39", "py310", "py311"]

[tool.ruff]
line-length = 100
select = ["E", "F", "W", "C90", "I", "N"]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
